--- a/translations/ghost+intl-icu.de.xlf
+++ b/translations/ghost+intl-icu.de.xlf
@@ -1087,5 +1087,17 @@
         <target>Dies ist eine Event-Stadt, sie wird nach ihrem Ende nicht im Ranking erscheinen. Möglicherweise gelten unübliche Regeln für diese Stadt.</target>
       </segment>
     </unit>
+    <unit id="m9yaaGL" name="Jeder Spieler erhält 1x Betapropin beim Start der Stadt.">
+      <segment>
+        <source>Jeder Spieler erhält 1x Betapropin beim Start der Stadt.</source>
+        <target>Jeder Spieler erhält 1x Betapropin beim Start der Stadt.</target>
+      </segment>
+    </unit>
+    <unit id="w8l8AIW" name="Beta-Funktionen aktivieren">
+      <segment>
+        <source>Beta-Funktionen aktivieren</source>
+        <target>Beta-Funktionen aktivieren</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
