FR Translation for new APAG power

--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -22314,7 +22314,7 @@ cette violente opération...]]></target>
       </notes>
       <segment>
         <source>Profi-Fotograph</source>
-        <target>Profi-Fotograph</target>
+        <target>Photographe professionnel</target>
       </segment>
     </unit>
     <unit id="Uy1Rmg9" name="Du beginst jede neue Stadt mit einer Kamera aus Vorkriegstagen.">
@@ -22325,7 +22325,7 @@ cette violente opération...]]></target>
       </notes>
       <segment>
         <source>Du beginst jede neue Stadt mit einer Kamera aus Vorkriegstagen.</source>
-        <target>Du beginst jede neue Stadt mit einer Kamera aus Vorkriegstagen.</target>
+        <target>Vous commencez toutes vos villes avec un appareil photo d'avant-guerre.</target>
       </segment>
     </unit>
   </file>
